Reading the vaues from the incoming metric, updating the watch with it.